# jwet

./: .pylintrc  Makefile  medium.py  pyproject.toml
jwet/: taste.py  tetris.py
jwet/pixel_runner/: README.md  game.py  main.py  obstacle.py  parameters.py  player.py
tests/: test_jwet.py
