[tool.poetry]
name = "jwet"
version = "0.1.0"
description = ""
authors = ["Tipan (Blackwell 76) <tipan.verella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
hypothesis = "^6.56.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
